--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,12 @@ dev = [
     "mypy", # For type checking
     "hatch-vcs", # For versioning
     "pre-commit", # For commit hooks
+    "pyinstaller", # For building binaries
 ]
 
 [tool.hatch.version]
 source = "vcs"
+raw-options = { tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$" }
 
 [tool.hatch.build.targets.sdist]
 exclude = [
